<resources>
    <string name="app_name">AndroidGcs</string>
    <string name="add_new_way">Add new way</string>
    <string name="delete_waypoint_dialog_question">Are you sure you want to delete this point?</string>
    <string name="delete_waypoint_dialog_title">Delete point</string>
    <string name="x_coordinate">X Coordinate</string>
    <string name="y_coordinate">Y Coordinate</string>
    <string name="height">Height</string>
    <string name="edit_route_dialog_error_message">Enter all coordinates!</string>
    <string name="download_waypoints">Download waypoints</string>
    <string name="upload_waypoints">Upload waypoints</string>
    <string name="save_waypoints">Save waypoints</string>
    <string name="delete_map_way_dialog_title">Delete way</string>
    <string name="delete_map_way_dialog_question">Are you sure you want to delete this way?</string>
    <string-array name="waypoint_types">
        <item>Way Point</item>
        <item>Takeoff</item>
        <item>Land</item>
    </string-array>
    <string name="drones_connections">Drones conncetions</string>
    <string name="connect_to_drone">Connect to drone</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="drone_connection_dialog_message">Wrong address</string>
    <string name="choose_drone">Choose drone</string>
    <string name="disconnect_drone">Disconnect</string>
    <string name="settings">Settings</string>
    <string name="def_height">Default height</string>
    <string name="gen_points">Generate land points?</string>
    <string name="gen">Generate</string>
    <string name="drones">Drones</string>
    <string name="way">Way</string>
    <string name="please_connect">Please connect to drone</string>
    <string name="success">Success</string>
    <string name="battery_str" formatted="false">Remaining: %d; Voltage: %f; Current: %f</string>
    <string name="ang_pos_str" formatted="false">Yaw: %f; Pitch: %f; Roll: %f</string>
    <string name="pos_str" formatted="false">Lat: %f; Lng: %f; Alt: %f</string>
    <string name="fail_con">Fail connection</string>
    <string name="land_gradient">Land gradient</string>
    <string name="gradient">Gradient</string>
    <string name="angle">Angle</string>
    <string name="takeoff_angle">TakeOff Angle</string>
</resources>
