<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/download_waypoints"
        android:icon="@drawable/ic_download"
        android:title="@string/download_waypoints"
        app:showAsAction="always"/>
    <item
        android:id="@+id/upload_waypoints"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload_waypoints"
        app:showAsAction="always"/>

    <item
        android:id="@+id/generate_points"
        android:icon="@drawable/ic_generate_points"
        android:title="@string/gen_points"
        app:showAsAction="always"/>

    <item
        android:id="@+id/snapshot_waypoints"
        android:icon="@drawable/ic_snapshot"
        android:title="@string/save_waypoints"
        app:showAsAction="always"/>
</menu>