<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/drone_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address" />

    <EditText
        android:id="@+id/drone_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port" />

    <Button
        android:id="@+id/submit_drone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_drone" />

</LinearLayout>