<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:text="@string/x_coordinate"
            android:gravity="center"/>
        <EditText
            android:id="@+id/new_x_coordinate"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:inputType="numberDecimal|numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:text="@string/y_coordinate"
            android:gravity="center"/>
        <EditText
            android:id="@+id/new_y_coordinate"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:inputType="numberDecimal|numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:text="@string/height"
            android:gravity="center"/>
        <EditText
            android:id="@+id/new_height"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_waypoint_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"/>

</LinearLayout>