<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/waypoint_type"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true" />

            <ImageButton
                android:id="@+id/delete_waypoint"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_delete" />

            <ImageButton
                android:id="@+id/edit_waypoint"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/delete_waypoint"
                android:src="@drawable/ic_edit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/x_coordinate"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/waypoint_x_coordinate"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/y_coordinate"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/waypoint_y_coordinate"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/height"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/waypoint_height"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>